# openai-smoke-test

./: .gitignore  Makefile  README.md  audit_vertexai_deployment_logs.py  benchmark-llm-api-with-dataset.py  pyproject.toml  requirements.txt
gke/: gke_llm_monitor.sh  gke_llm_start.sh  gke_llm_stop.sh
gke/deployments/: qwen3-235b-a22b-instruct-2507-8xh100.yaml  qwen3-235b-b200.yaml  qwen3-235b-fp8_4xh100.yaml  qwen3-235b-fp8_8xh100.yaml  qwen3-235b-fp8_h100.yaml  qwen3-8b-l4.yaml  qwen3-next-80b.yaml  qwen3-next-80b_a100.yaml
src/smoke/: __main__.py  aggregate_benchmark_logs.py  config.yaml  inference_test.py  mistral_client.py  multi_turn_test.py  quick_test.py  quick_test_config.yaml  run.py  score_report.py  stress-test.yaml  stress_test.py
src/smoke/multi_turn_chat/: multi_turn_chat_client.py
src/smoke/multi_turn_chat/data/initial_context/: 1__openai:gpt-5.json  2__openai:gpt-5.json  3__openai:gpt-5.json  4__openai:gpt-5.json  5__openai:gpt-5.json  6__openai:gpt-5.json  7__openai:gpt-5.json  8__openai:gpt-5.json
src/smoke/multi_turn_chat/data/queries/: generic_queries.csv  generic_queries_2.csv
src/smoke/summary/: mistral_client.py  summary_evaluator.py  summary_generator.py
src/smoke/unieval/: __init__.py  utils.py
src/smoke/unieval/metric/: __init__.py  evaluator.py  scorer.py
