[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-smoke-test"
version = "0.1.0"
description = "Search Firefox doc with "
authors = [
    { name="Tarek Ziadé", email="tarek@ziade.org" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/firefox-ai/openai-smoke-test"
Issues = "https://github.com/firefox-ai/openai-smoke-test/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
openai-smoketest = "smoke.run:main"
multi-turn-chat-smoketest = "smoke.multi_turn_test:main"
